# jupyterlite-lsp

./: .gitignore  .prettierignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  ROADMAP.md  dodo.py  package.json  pyproject.toml
.binder/: environment.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  release.md
.github/workflows/: ci.yml
docs/: conf.py
examples/: README.yml  jupyter-lite.json  jupyter_lite_config.json
src/jupyterlite_lsp/: __init__.py  constants.py  js.py
