[build-system]
requires = ["flit_core >=3.7.1,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jupyterlite-lsp"
version = "0.1.0a0"
description = "Multiplexing Language Server Protocol server for JupyterLite"
authors = [
    {name = "jupyterlite-lsp contributors", email = "jupyterlite-lsp@users.noreply.github.com"},
]
readme = "README.md"
classifiers = [
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"
dependencies = [
    "jupyterlab-lsp >=3.10.2",
    "jupyterlite >=0.1.0b15"
]

[project.urls]
"Bug Tracker" = "https://github.com/jupyterlite/lsp/issues"
"Changelog" = "https://github.com/jupyterlite/lsp/blob/main/CHANGELOG.md"
"Documentation" = "https://jupyterlite-lsp.rtfd.io"
"Source" = "https://github.com/jupyterlite/lsp"

[tool.flit.sdist]
include = ["src/jupyterlite_lsp/_d"]

[tool.flit.module]
name = "jupyterlite_lsp"

[tool.flit.external-data]
directory = "src/jupyterlite_lsp/_d"

[tool.doit]
backend = "sqlite3"
verbosity = 2

[tool.doit.commands.list]
status = true
subtasks = true
